# Internships

./: README.md
YOLOv5_mnn/: CMakeLists.txt  README.md  yolov5-mnn
YOLOv5_mnn/include/: classnames.hpp  time_tools.hpp
YOLOv5_mnn/src/: Yolo.cpp  main.cpp
age_gender_test/: export_onnx.py  mobile_gender.py  multibranch_mobile.py  multilabel_mobile.py  predict_gender.py  test_blur.py
cv-cuda-python/: inference.py  inference_pytorch.py
cv-cuda-python/yolov5-6.0/: cvcuda_utils.py  detect.py  detect_cvcuda.py
cv-cuda-python/yolov5-6.0/utils/: plots.py
demo_onnxruntime/: CMakeLists.txt  readme.md  test  test.cpp
face_detect_onnxrun_cpp_py/: CMakeLists.txt  face_detector.cpp  face_detector.hpp  main.cpp  main.py
face_detect_onnxrun_cpp_py/models/: yolov7-lite-e.onnx
pedestrain-attribute-recongnition/Rethinking_of_PAR/: batch_engine.py  demo.py  export_onnx.py  readme.md  requirements.txt  train.py
pedestrain-attribute-recongnition/Rethinking_of_PAR/configs/pedes_baseline/: pa100k1.yaml
pedestrain-attribute-recongnition/Rethinking_of_PAR/dataset/pedes_attr/preprocess/: format_pa100k.py
pedestrain-attribute-recongnition/Rethinking_of_PAR/models/: model_factory.py
pedestrain-attribute-recongnition/Rethinking_of_PAR/models/backbone/: resnet.py  vit.py
pedestrain-attribute-recongnition/Rethinking_of_PAR/tools/: function.py
pedestrain-attribute-recongnition/cpp/: CMakeLists.txt  main.cpp  readme.md
pedestrain-attribute-recongnition/cpp/mnn/: pede_attr.cpp  pede_attr.hpp
